<resources>
    <string name="app_name">TaxiPlus</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_phone_for_auth">Введите номер телефона для авторизации</string>
    <string name="enter_name_for_auth">Введите ваше имя и город для регистрации</string>
    <string name="enter_code">Введите код из СМС</string>
    <string name="auth_code">Код</string>
    <string name="auth_name">Имя</string>
    <string name="enter_phone">Введите номер телефона</string>
    <string name="enter_email">Введите E-mail</string>
    <string name="enter_desc">Введите описание</string>
    <string name="email">E-mail:</string>
    <string name="search">Поиск</string>
    <string name="next">Далее</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="enter_correct_code">Введите корректный код из СМС</string>
    <string name="enter_correct_phone">Введите правильный номер телефона</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Выход</string>
    <string name="main">Главная</string>
    <string name="null_driver">Заказ еще не принят!</string>
    <string name="trip_history">История поездок</string>
    <string name="current_trips">Действующие заказы</string>
    <string name="add_card">Добавить карту</string>
    <string name="add_place">Добавить место</string>
    <string name="my_places">Мои места</string>
    <string name="my_coins">Мои монеты</string>
    <string name="settings">Настройки</string>
    <string name="profile_settings">Настройки аккаунта</string>
    <string name="faq">FAQ</string>
    <string name="faq_all">Часто задаваемые вопросы</string>
    <string name="order_driver">Трезвый водитель</string>
    <string name="my_bonuses">Мои монеты</string>
    <string name="driver_mode">Режим водителя</string>
    <string name="user_mode">Режим клиента</string>
    <string name="news">Новости</string>
    <string name="prefs_theme_key">theme</string>
    <string name="select_mode">Выбрать режим</string>
    <string name="from">Откуда?</string>
    <string name="to">Куда?</string>
    <string name="modeTaxi">Такси</string>
    <string name="modeLadyTaxi">Lady Такси</string>
    <string name="modeInvaTaxi">ИнваТакси</string>
    <string name="modeCitiesTaxi">Межгород</string>
    <string name="modeCargoTaxi">Грузоперевозки</string>
    <string name="modeEvo">Эвакуатор</string>
    <string name="save_place">Сохраненные адреса</string>
    <string name="set_on_map">Указать местоположение на карте</string>
    <string name="set_addresses">Укажите обе точки</string>
    <string name="set_price">Укажите цену</string>
    <string name="price">Цена</string>
    <string name="set_comment">Комментарий, пожелания</string>
    <string name="comment_for_driver">Комментарий к водителю</string>
    <string name="comment_for_order">Комментарий к поездке</string>
    <string name="date">Дата</string>
    <string name="save">Сохранить</string>
    <string name="make_order">Заказать</string>
    <string name="cancel">Отмена</string>
    <string name="cancel_order">Отмена заказа</string>
    <string name="select">Выбрать</string>
    <string name="month"> месяц</string>
    <string name="day"> день</string>
    <string name="weight">Вес</string>
    <string name="call">Вызвать</string>
    <string name="to_call">Позвонить</string>
    <string name="car_model">Марка автомашины</string>
    <string name="car_type">Модель автомашины</string>
    <string name="model">Модель эвакуируемого авто</string>
    <string name="set_weight">указать вес [кг]</string>
    <string name="set_volume">указать объем [м<sup>3</sup>]</string>
    <string name="econom_mode">Эконом</string>
    <string name="comfort_mode">Стандарт</string>
    <string name="business_mode">Комфорт</string>
    <string name="corp_mode">Корпоративный клиент</string>
    <string name="by_hand">Оплата наличными</string>
    <string name="by_card">Оплата картой</string>
    <string name="by_bonuses">Оплата бонусами</string>
    <string name="offer_name">Имя:</string>
    <string name="offer_car_model">Марка машины:</string>
    <string name="offer_car_model_wd">Марка машины</string>
    <string name="offer_car_number">Номер машины:</string>
    <string name="offer_date">Дата посадки:</string>
    <string name="offer_time">Время прибытия:</string>
    <string name="offer_phone">Номер телефона:</string>
    <string name="phone">Телефон:</string>
    <string name="offer_mode">Режим:</string>
    <string name="accept">Принять</string>
    <string name="decline">Отказать</string>
    <string name="confirm_order">Оформление заказа</string>
    <string name="info_order">Информация о заказе</string>
    <string name="type_massage">Ваше сообщение</string>
    <string name="point_a">Точка А</string>
    <string name="point_b">Точка В</string>
    <string name="order_information">Информация о заказе</string>
    <string name="decline_order">Отменить</string>
    <string name="select_place">Выберите место на карте</string>
    <string name="fav_place">Избранное место</string>
    <string name="fill_fields">Заполните все поля</string>
    <string name="lastname">Фамилия:</string>
    <string name="coins">Монеты:</string>
    <string name="recomendations">Рекомендации к сервису</string>
    <string name="write_recomendations">Написать рекомендацию</string>
    <string name="send">Отправить</string>
    <string name="enter_gos_number">Гос номер</string>
    <string name="produced_year">Год выпуска</string>
    <string name="additional">Дополнительно</string>
    <string name="select_taxipark">Выбрать таксопарк</string>
    <string name="taxipark">Tаксопарк</string>
    <string name="register">Зарегистрироваться</string>
    <string name="driver_register">Регистрация водителя</string>
    <string name="mode_city_">Город</string>
    <string name="mode_intercity">Межгород</string>
    <string name="mode_cargo">Грузовые</string>
    <string name="mode_coins">Монеты</string>
    <string name="mode_night">Ночной режим</string>
    <string name="mode_day">Дневной режим</string>
    <string name="my_taxipark">Лента заказов</string>
    <string name="intercity">Межгород</string>
    <string name="general_chat">Общий чат</string>
    <string name="hide">Скрыть</string>
    <string name="complaint">Жалоба</string>
    <string name="on_map">На карте</string>
    <string name="orders">Заказы</string>
    <string name="my_orders">Мои заказы</string>
    <string name="new_order">Оставить заявку</string>
    <string name="new_order_text">Новый заказ</string>
    <string name="new_order_in_1_km">в радиусе километра</string>
    <string name="balance">Текущий баланс:</string>
    <string name="trips_amount">Количество поездок:</string>
    <string name="earn_coins">Заработано монет:</string>
    <string name="open_session">Открытие смены</string>
    <string name="opened_session">Смена открыта</string>
    <string name="closed_session">Смена закрыта</string>
    <string name="close_session_event">Закрыть смену</string>
    <string name="close">Закрыть</string>
    <string name="rate">Оценить</string>
    <string name="navigation">Навигация</string>
    <string name="current_orders">Текущий заказ</string>
    <string name="open_session_event">Открыть смену</string>
    <string name="successfully_added">Успешно добавлено!</string>
    <string name="successfully_opened">Успешно открыта!</string>
    <string name="successfully_closed">Успешна закрыта!</string>
    <string name="successfully_rejected">Успешна отклонена!</string>
    <string name="not_found">Адрес не найден</string>
    <string name="try_later">Попробуйте позже</string>
    <string name="after_moderation_will_change">Ваши данные будут изменены после модерации</string>
    <string name="remainder">Остаток:</string>
    <string name="six_hour">6 часов</string>
    <string name="unlim">12 часов</string>
    <string name="select_time">Выберите длину смены</string>
    <string name="wait_response">Ожидайте ответа от пользователя</string>
    <string name="order_exist">Окончите текущий заказ</string>
    <string name="user_accepted">Клиент подтвердил Вас</string>
    <string name="new_offer">Водитель откликнулся</string>
    <string name="new_orders">Новые заказы</string>
    <string name="new_offer_body">на Ваш заказ</string>
    <string name="came_button">Я подъехал</string>
    <string name="driver_is_came">Водитель подъехал ! 5 минут ожидания</string>
    <string name="start_way_button">Начал заказ</string>
    <string name="end_way_button">Окончил заказ</string>
    <string name="came_button_response">Ждите клиента</string>
    <string name="order_id_ended">Завершить поездку</string>
    <string name="is_order_ended">Вы подъехали?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="are_you_sure_to_exit">Вы уверены что хотите выйти?</string>
    <string name="start_trip">Начать поездку</string>
    <string name="end_trip">Закончить поездку</string>
    <string name="trip_is_started">Поездка началась</string>
    <string name="trip_is_ended">Поездка закончилась</string>
    <string name="is_trip_ended">Поездка закончилась?</string>
    <string name="rate_driver_text">Оцените поездку</string>
    <string name="successfully_rated">Успешно оценено</string>
    <string name="share">Поделится</string>
    <string name="share_via">Поделится используя:</string>
    <string name="on_moderation">Вы находитесь на модерации администратора</string>
    <string name="complaint_couse">Причина жалобы</string>
    <string name="order_is_canceled">Заказ отменен</string>
    <string name="car_model_hint">Марка</string>
    <string name="car_submodel_hint">Модель</string>
    <string name="are_you_sure_to_cancel_order">Вы хотите отменить заказ?</string>
    <string name="wait_drivers">Заявка принята, ожидайте водителей</string>
    <string name="order_added">Заявка принята</string>
    <string name="order_added_sober">Заявка принята, ожидайте</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="sos">SOS</string>
    <string name="region">Регион</string>
    <string name="city">Город</string>
    <string name="city_dots">Город:</string>
    <string name="select_city">Выберите город</string>
    <string name="seatnumbers">Кол. мест:</string>
    <string name="seat_numbers">Количество мест</string>
    <string name="price_per_one">Цена за одного пассажира</string>
    <string name="pay">Оплатить</string>
    <string name="no_access_message">Для просмотра необходимо оплатить</string>
    <string name="no_access_message_publish">Для публикаций необходимо оплатить</string>
    <string name="not_enought_balance">Ваш баланс недостаточен</string>
    <string name="add_car_text">Добавление машины</string>
    <string name="car_type_rec">Тип машины</string>
    <string name="add_car_desc">Для просмотра заказов необходимо добавить необходимую машину</string>
    <string name="cargo_decs_hint">Описание груза</string>
    <string name="evo_desc">Модель машины и описание</string>
    <string name="mech">МКПП</string>
    <string name="auto">АКПП</string>
    <string name="failed_payment">Онлайн оплата не прошла</string>
    <string name="pay_by_hand">Оплатите наличными</string>
    <string name="get_money">Вывод средств</string>
    <string name="amount">Введите количество монет</string>
    <string name="card_number">Введите 16 - значный номер карты</string>
</resources>