<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/_12sdp"
    android:background="@color/white">

    <EditText
        android:id="@+id/cnod_from_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_gray_view"
        android:hint="@string/from"
        android:padding="@dimen/_6sdp"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/gray"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/cnod_to_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/rounded_gray_view"
        android:hint="@string/to"
        android:padding="@dimen/_6sdp"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/gray"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/cnod_date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/rounded_gray_view"
        android:hint="@string/date"
        android:padding="@dimen/_6sdp"
        android:textSize="@dimen/_13ssp"
        android:inputType="datetime"
        android:textColor="@color/gray"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/cnod_price_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/rounded_gray_view"
        android:hint="@string/price"
        android:padding="@dimen/_6sdp"
        android:textSize="@dimen/_13ssp"
        android:inputType="number"
        android:textColor="@color/gray"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/cnod_send_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/rounded_green_view"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        android:textAllCaps="false"
        android:text="@string/send"/>
</LinearLayout>