<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:padding="@dimen/_15sdp"
    android:orientation="vertical"
    android:background="@color/white">
    <ImageView
        android:id="@+id/clv_image"
        android:layout_width="@dimen/_53sdp"
        android:layout_height="@dimen/_53sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/icon_exit"/>

    <TextView
        android:id="@+id/clv_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@id/clv_image"
        android:textAlignment="center"
        android:textSize="@dimen/_13ssp"
        android:text="@string/are_you_sure_to_exit"
        android:textColor="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clv_title_text"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/clv_no_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:textAllCaps="false"
            android:background="@color/trans"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/_15ssp"
            android:visibility="visible"/>
        <Button
            android:id="@+id/clv_yes_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:textAllCaps="false"
            android:background="@color/trans"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/_15ssp"
            android:visibility="visible"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>