<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:background="@color/white"
    tools:context=".ui.driver.AddCarFragment">
    <android.support.v7.widget.Toolbar
        android:id="@+id/facf_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:requiresFadingEdge="horizontal"
            android:gravity="center_vertical">
            <ImageButton
                android:id="@+id/facf_back"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/icon_back" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_height="wrap_content"
                android:text="@string/add_car_text"
                android:textAlignment="center"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/facf_toolbar"
        app:layout_constraintBottom_toBottomOf="parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/gray"
                android:textSize="@dimen/_11sdp"
                android:textAlignment="center"
                android:text="@string/add_car_desc"/>
            <LinearLayout
                android:id="@+id/facf_car_model_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/desc"
                android:background="@drawable/border_for_view"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/facf_car_model_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/gray"
                    android:text="@string/car_model"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"/>
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@drawable/icon_bottom_arrow"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/facf_car_submodel_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/facf_car_model_view"
                android:background="@drawable/border_for_view"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/facf_car_submodel_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/gray"
                    android:text="@string/car_type"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"/>
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@drawable/icon_bottom_arrow"/>
            </LinearLayout>
            <TextView
                android:id="@+id/types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/facf_car_submodel_view"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14ssp"
                android:text="@string/car_type_rec"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_18sdp"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/facf_types_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/types"/>
            <EditText
                android:id="@+id/facf_seats_edittext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                app:layout_constraintTop_toBottomOf="@id/facf_types_recyclerview"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/border_for_view"
                android:hint="@string/seat_numbers"
                android:textSize="@dimen/_14ssp"
                android:inputType="number"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:padding="@dimen/_5sdp" />

            <EditText
                android:id="@+id/facf_gos_number_edittext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                app:layout_constraintTop_toBottomOf="@id/facf_seats_edittext"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/border_for_view"
                android:hint="@string/enter_gos_number"
                android:textSize="@dimen/_14ssp"
                android:inputType="textCapCharacters"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:padding="@dimen/_5sdp" />

            <EditText
                android:id="@+id/facf_year_edittext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                app:layout_constraintTop_toBottomOf="@id/facf_gos_number_edittext"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/border_for_view"
                android:hint="@string/produced_year"
                android:textSize="@dimen/_14ssp"
                android:inputType="number"
                android:maxLength="4"
                android:digits="0123456789"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:padding="@dimen/_5sdp" />
            <TextView
                android:id="@+id/additional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/facf_year_edittext"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14ssp"
                android:text="@string/additional"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_18sdp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/facf_facilities_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/additional"
                android:layout_marginTop="@dimen/_10sdp"/>

            <Button
                android:id="@+id/facf_add_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                app:layout_constraintTop_toBottomOf="@id/facf_facilities_recyclerview"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/rounded_green_view"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:textAllCaps="false"
                android:text="@string/register"/>

            <ProgressBar
                android:id="@+id/facf_progressbar"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:indeterminate="true"
                android:visibility="gone"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>